charon/tests/ui/simple/fewer-clauses-in-method-impl.2.out
error: Mismatched method generics:
       params:   
       supplied: [@TraitDecl1<()>]
  --> tests/ui/simple/fewer-clauses-in-method-impl.2.rs:14:5
   |
14 |     <() as Trait>::method()
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |

ERROR The extraction generated 1 errors
