charon/tests/ui/simple/fewer-clauses-in-method-impl.2.rs
//@ known-failure
trait Trait {
    fn method()
    where
        Self: Sized;
}

impl Trait for () {
    fn method() {}
}

fn main() {
    <() as Trait>::method()
}
